Fixing bug in header and updating base.html

--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -21,9 +21,11 @@
         <input type="checkbox" id="nav-toggle">
         <label class="header__navigation-toggle" for="nav-toggle"></label>
         <div class="header__navigation">
-          {% module "header_navigation_primary" path="../../modules/Menu section", label="Primary Navigation" %}
+          {% module "header_navigation_primary" 
+            path="../../modules/Menu section", 
+            label="Primary Navigation" 
+          %}
         </div>
-    </div>
     </div>
   </div>
 </header>
