Removing unneeded module labels

--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -10,7 +10,6 @@
 
     {% module "blog_listing_banner"
       path="../modules/Blog Listing Banner",
-      label="Blog Listing Banner",
       background_image={
         "src": get_asset_url("../images/blog-banner.png")
       }
@@ -20,7 +19,7 @@
       <div class="content-wrapper">
         <div class="row-fluid span12">
           <div class="blog-navigation__tag-filter column span6">
-            {% module "blog_tag_filter" path="../modules/Blog Tag Filter", label="Blog Tag Filter" %}
+            {% module "blog_tag_filter" path="../modules/Blog Tag Filter" %}
           </div>
           <div class="blog-navigation__search column span6">
             {% module "blog_search" path="@hubspot/search_input", label="Blog Search" %}
