--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -16,14 +16,13 @@
       %}
         {% dnd_row %}
             {% dnd_module path="@hubspot/header",
-              label="Header",
               header_tag="h1",
               value="Contact Us"  
             %}
             {% end_dnd_module %}
         {% end_dnd_row %}
         {% dnd_row %}
-            {% dnd_module path="@hubspot/rich_text", label="Rich text" %}
+            {% dnd_module path="@hubspot/rich_text" %}
                 {% module_attribute "html" %}
                 <div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis.</p>
@@ -41,7 +40,6 @@
       %}
         {% dnd_row %}
           {% dnd_module path="@hubspot/form",
-            label="Form",
             title="Yes! Send Me the Ebook!" 
           %}
           {% end_dnd_module %}
