--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -9,8 +9,7 @@
           <div class="column span4">
             <div class="footer__logo">
               {% module "footer_logo" 
-                path="@hubspot/logo", 
-                label="Logo",
+                path="@hubspot/logo",
                 img={
                   "override_inherited_src": true,
                   "src": get_asset_url("../../images/logo.png"),
@@ -22,8 +21,7 @@
             </div>
             <div class="footer__follow-me">
               {% module "footer_social" 
-                path="../../modules/Social follow",
-                label="Social Follow",
+                path="../../modules/Social Follow",
                 social_link=[
                   {"social_account": "facebook-f"},
                   {"social_account": "linkedin-in"},
