--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -6,8 +6,7 @@
   <div class="header__container">
     <div class="header__logo">
       {% module "header_logo" 
-        path="@hubspot/logo", 
-        label="Logo",
+        path="@hubspot/logo",
         img={
           "override_inherited_src": true,
           "src": get_asset_url("../../images/logo.png"),
@@ -22,7 +21,7 @@
         <label class="header__navigation-toggle" for="nav-toggle"></label>
         <div class="header__navigation">
           {% module "header_navigation_primary" 
-            path="../../modules/Menu section", 
+            path="../../modules/Menu Section", 
             label="Primary Navigation" 
           %}
         </div>
