--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -13,7 +13,6 @@
         {% dnd_column %}
             {% dnd_row %}
                 {% dnd_module path="@hubspot/header",
-                  label="Header",
                   header_tag="h1",
                   value="About Our Company"
                 %}
@@ -30,7 +29,6 @@
                 {% dnd_module 
                     path="@hubspot/linked_image",
                     flexbox_positioning="TOP_CENTER",
-                    label="Image",
                     img={
                       "src": get_asset_url("../images/mountains.png"),
                       "alt": "Mountains",
@@ -40,7 +38,7 @@
                 {% end_dnd_module %}
             {% end_dnd_row %}
             {% dnd_row %}
-                {% dnd_module path="@hubspot/rich_text", label="Rich text" %}
+                {% dnd_module path="@hubspot/rich_text" %}
                     {% module_attribute "html" %}
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis.</p>
@@ -69,7 +67,6 @@
         %}
           {% dnd_row %}
             {% dnd_module path="@hubspot/linked_image",
-              label="Image",
               img={
                 "src": get_asset_url("../images/computer.png"),
                 "alt": "Computer and phone",
@@ -84,7 +81,7 @@
           width=6
         %}
           {% dnd_row %}
-            {% dnd_module path="@hubspot/rich_text", label="Rich Text" %}
+            {% dnd_module path="@hubspot/rich_text" %}
               {% module_attribute "html" %}
                 <div>
                   <h2 style="color: #fff;">Full Control</h2>
@@ -100,9 +97,8 @@
           {% end_dnd_row %}
           {% dnd_row %}
             {% dnd_module 
-              path="../modules/Customizable button",
+              path="../modules/Customizable Button",
               flexbox_positioning="MIDDLE_LEFT",
-              label="Button",
               link="#",
               button_text="Free Trial"
             %}
@@ -117,7 +113,6 @@
         {% dnd_row %}
           {% dnd_module 
             path="@hubspot/rich_text",
-            label="Rich text",
             offset=0,
             width=4
           %}
@@ -130,7 +125,6 @@
           {% end_dnd_module %}
           {% dnd_module 
             path="@hubspot/rich_text",
-            label="Rich text",
             offset=4,
             width=8
           %}
