Removing old alternative-class

--- a/src/templates/landingpage.html
+++ b/src/templates/landingpage.html
@@ -103,7 +103,7 @@
           %}
             {% module_attribute "html" %}
               <div>
-                <ul class="alternative-list" style="color: #fff;">
+                <ul style="color: #fff;">
                   <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
                   <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
                 </ul>
@@ -117,7 +117,7 @@
           %}
             {% module_attribute "html" %}
               <div>
-                <ul class="alternative-list" style="color: #fff;">
+                <ul style="color: #fff;">
                   <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
                   <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
                 </ul>
@@ -131,7 +131,7 @@
           %}
             {% module_attribute "html" %}
               <div>
-                <ul class="alternative-list" style="color: #fff;">
+                <ul style="color: #fff;">
                   <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
                   <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
                 </ul>
