Adding hover effects for homepage modules

--- a/src/modules/Testimonial.module/module.css
+++ b/src/modules/Testimonial.module/module.css
@@ -1,15 +1,23 @@
 .testimonial {
-    background-color: #fff; 
-    padding: 45px 40px 20px; 
+    background-color: rgba(255, 255, 255, 0.9); 
+    padding: 45px 40px 30px; 
     text-align: center; 
     margin-top: 20px; 
+    border-bottom: 15px solid transparent; 
+    -webkit-transition: all .15s linear;
+    -o-transition: all .15s linear;
+    transition: all .15s linear;
+}
+
+.testimonial:hover {
+    background-color: #fff; 
 }
 
 .testimonial__avatar, 
 .testimonial__name {
     display: inline-block;
     vertical-align: middle;
-    margin: 20px 0;
+    margin: 20px 0 0;
 }
 
 .testimonial__avatar {
