Updating menu icons

--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -18,7 +18,9 @@
     </div>
     <div class="header__menu">
         <input type="checkbox" id="nav-toggle">
-        <label class="header__navigation-toggle" for="nav-toggle"></label>
+        <label class="header__navigation-toggle" for="nav-toggle">
+          <span class="header__mobile-menu-icon"></span>
+        </label>
         <div class="header__navigation">
           {% module "header_navigation_primary" 
             path="../../modules/Menu Section", 
