--- a/src/templates/landingpage.html
+++ b/src/templates/landingpage.html
@@ -56,7 +56,7 @@
             path="@hubspot/rich_text",
             offset=4,
             width=4,
-            flexbox_positioning="MIDDLE_LEFT",
+            flexbox_positioning="MIDDLE_LEFT"
           %}
             {% module_attribute "html" %}
               <div>
